fix taskbar icon margin on small screen

--- a/less/mobile.less
+++ b/less/mobile.less
@@ -14,6 +14,14 @@
 	}
 }
 
+// fix taskbar icon margin
+@media (max-width: 992px) {
+	#taskbar {
+    margin-right: 6px;
+    margin-bottom: 30px;
+	}
+}
+
 // small screen
 @media (max-width: 767px) {
 	.invisible-mobile {
